# regex_transformer

./: .gitignore  README.md  pyproject.toml
docs/: api_docs.md
experiments/: 1_verify_fsm_correctness.md  2_fsm_to_qkv_construction.md  3_transformer_training_methodology.md  commands.md  fsm_to_transformer_equivalence.md
notes/: feature_design.md  m1_tasks.md  m2_tasks.md  m3_tasks.md  m4_tasks.md  m5_tasks.md  m6_tasks.md  m7_tasks.md  m8_tasks.md  m9_tasks.md  milestone_planning.md  prior_work.md  project_summary.md  technical_design.md
src/: README.md  README_WHATS_AVAILABLE.md  __init__.py  fsm_explorer.py  regex_compilation_demo.py  test_construction.py  test_construction_standalone.py
src/data/: __init__.py  collate.py  dataset.py  feasibility.py  generator.py  loader.py  microsets.py  quotas.py  split.py  telemetry.py  tokenizer.py
src/data/tests/: test_collate.py  test_dataset.py  test_feasibility.py  test_generator.py  test_loader.py  (+4 more)
src/eval/: __init__.py  metrics.py  ood.py
src/experiments/: README.md  __init__.py  compare_weights.py  list_results.py  test_data_generation.py  train_model.py
src/fsm/: __init__.py  compile.py  dfa.py  regex_def.py  serialize.py  smoke_test.py
src/model/: __init__.py  attention.py  config.py  embedding.py  fsm_construction.py  heads.py  mlp.py  positional.py  transformer.py
src/results/: README.md
src/tests/: test_attention_masking.py  test_collation.py  test_data_report.py  test_guide.md  test_losses.py
src/train/: __init__.py  checkpoint.py  loop.py  losses.py  optim.py
tests/: test_integration.py
(+7 files in other folders)
