[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regex-transformer"
version = "0.1.0"
description = "Train transformers on regex patterns to analyze learned FSM structure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
